# chat-in-c

./: .gitignore  CMakeLists.txt  README.md
common/: protocol.c  protocol.h
server/: CMakeLists.txt  main.c  server.c  server.h
ui/: CMakeLists.txt  client.c  client.h  network.c  ui_drawing.c  utils.c
